--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -1,7 +1,16 @@
-@import url("https://eox.at/fonts/roboto/roboto.css");
+@import url("/fonts/Exo_2/exo2.css");
+@import url("/fonts/Open_Sans/opensans.css");
 
-* {
-  font-family: Roboto !important;
+:root{
+  --vp-font-family-base: 'Open Sans', sans-serif;
+}
+
+body {
+  font-family:  'Open Sans', sans-serif !important;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Exo 2', sans-serif !important;
 }
 
 @media (max-width: 768px) {
